Fix panic when we cannot find self-id of probing nodes. This shouldn't happen as far as the self-id buffer is vaild but some people have this problem.

PR: kern/83999
Submitted by: Markus Wild <fbsd-lists@dudes.ch>
MFC after: 3 days

Former-commit-id: b894faffef21184cbd25e29ad9b35224aad0d356